[gd_scene load_steps=7 format=3 uid="uid://ct3cqjw2eych8"]

[ext_resource type="Texture2D" uid="uid://0qqrmeubynqg" path="res://bg.png" id="1_36sr6"]
[ext_resource type="PackedScene" uid="uid://dmrmbl3prx8kd" path="res://exit_door.tscn" id="2_358yj"]
[ext_resource type="Script" uid="uid://bv5p7452y27k" path="res://player2.gd" id="2_x25pt"]
[ext_resource type="Texture2D" uid="uid://d2the32jelup" path="res://walk/walk1.png" id="3_358yj"]
[ext_resource type="PackedScene" uid="uid://v7wgilu8nn2u" path="res://DialogueBox.tscn" id="4_brs7h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rpqi1"]

[node name="school_hallway" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1924, 537)
texture = ExtResource("1_36sr6")

[node name="CharacterBody2D" type="CharacterBody2D" parent="Sprite2D"]
z_index = 1
position = Vector2(100, 0)
script = ExtResource("2_x25pt")

[node name="CharacterSprite" type="Sprite2D" parent="Sprite2D/CharacterBody2D"]
position = Vector2(-92, 116)
texture = ExtResource("3_358yj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/CharacterBody2D"]
shape = SubResource("CapsuleShape2D_rpqi1")

[node name="Camera2D" type="Camera2D" parent="Sprite2D/CharacterBody2D"]

[node name="DialogueBox" parent="Sprite2D/CharacterBody2D" instance=ExtResource("4_brs7h")]
offset_left = -955.0
offset_top = -529.0
offset_right = -915.0
offset_bottom = -489.0

[node name="ExitDoor" parent="." instance=ExtResource("2_358yj")]
position = Vector2(1598, -142)

[connection signal="dialogue_closed" from="Sprite2D/CharacterBody2D/DialogueBox" to="Sprite2D/CharacterBody2D" method="_on_dialogue_closed"]
[connection signal="dialogue_opened" from="Sprite2D/CharacterBody2D/DialogueBox" to="Sprite2D/CharacterBody2D" method="_on_dialogue_opened"]
